--- a/octomap_world/CMakeLists.txt
+++ b/octomap_world/CMakeLists.txt
@@ -27,3 +27,11 @@ target_link_libraries(octomap_manager ${PROJECT_NAME})
 ##########
 cs_install()
 cs_export()
+
+################################################
+#Add all files in subdirectories of the project in
+# a dummy_target so qtcreator have access to all files
+FILE(GLOB_RECURSE extra_files
+    ${CMAKE_SOURCE_DIR}/*)
+add_custom_target(dummy_${PROJECT_NAME} SOURCES ${extra_files})
+################################################
